Final IOS Safari right alignment fix! pls god

--- a/src/modules/BreakfreeTradingSocial/components/sonar-feed-card/sonar-feed-card.component.scss
+++ b/src/modules/BreakfreeTradingSocial/components/sonar-feed-card/sonar-feed-card.component.scss
@@ -88,7 +88,6 @@
             align-items: center;
             justify-content: right;
             justify-self: right;
-            display: flex;
             flex: 1 0 auto;  //Fixes right alignment issueson ios
             float: right;
             text-align: right;
